--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.toolbar-spacer{
+    flex: 1 1 auto;
+}
+
+.table {
+    border: 10px;
+}
+
+.toolbar{
+    background-color: #DBD9D9;
+    border-radius: 5px;
+    color: black;
+
+}
